[gd_scene load_steps=3 format=2]

[ext_resource path="res://FlyingFurniture/FlyingFurniture.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="FlyingFurniture" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
